Bumper til java 16.